@@ -1,8 +1,9 @@
 nymea-plugins (1.7.104) buster focal jammy; urgency=medium
 
 * Go-e charger plugin: Disconnected state slower to trigger. Fixed hardware charge current limit not set correctly for api version 1.
+* Go-e charger plugin: fixed hardware charge current limit not set correctly for api version 1.
 
- -- Sebastian Ringer <s.ringer@consolinno.de> Tue, 30 Apr 2024 16:22:53 +0200
+ -- Sebastian Ringer <s.ringer@consolinno.de> Fri, 29 Apr 2024 15:46:53 +0200
 
 nymea-plugins (1.7.103) buster focal jammy; urgency=medium
 
